--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </h1>
                 <p class="content-p">
                     갑작스레 찾아온 통증에 당황하셨나요?<br>
-                    여기 나에게 맞는 약 찾기를 시작하시면 성별, 연령대, 병명, 약의 제형에 따라 상황에 알맞게 약을 추천해드립니다.
+                    여기 나에게 맞는 약 찾기를 시작하시면 성별, 연령대, 병명, 약의 제형에 따라 상황에 알맞게 약을 추천해드립니다!
                 </p>
 
                 <p class="content-p">
